--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -13,10 +13,10 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: |
-          "Message that will be displayed on users' first issue"
-          "Hehe"
-          "![Screenshot](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK2nG24AYDm6FOEC7jIfgubO96GbRso2Xshu1f8abSYQ&s)"
+          Message that will be displayed on users' first issue
+          Hehe
+          ![Screenshot](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK2nG24AYDm6FOEC7jIfgubO96GbRso2Xshu1f8abSYQ&s)
         pr-message: |
-          "Message that will be displayed on users' first pull request"
-          "Hehe"
-          "![Screenshot](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK2nG24AYDm6FOEC7jIfgubO96GbRso2Xshu1f8abSYQ&s)"
+          Message that will be displayed on users' first pull request
+          Hehe
+          ![Screenshot](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK2nG24AYDm6FOEC7jIfgubO96GbRso2Xshu1f8abSYQ&s)
